--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   },
   "devDependencies": {
     "asar": "~0.6.1",
-    "electron-packager": "~4.0.2"
+    "electron-packager": "~4.0.2",
+    "standard": "^4.5.3"
   },
   "scripts": {
     "build": "jade views/index.jade",
